@@ -11,6 +11,7 @@ Revision history for DBIx::Class
           https://bugzilla.redhat.com/bugzilla/show_bug.cgi?id=196836
         - fix a pathological prefetch case
         - table case fix for Oracle in columns_info_for
+        - stopped search_rs deleting attributes from passed hash
 
 0.07000 2006-07-23 02:30:00
         - supress warnings for possibly non-unique queries, since
